class Door {
   constructor() {
      this.isUnlocked = false;
   }

   unlock() {
      this.isUnlocked = true;
   }
}